[metadata]
keywords = pyyaml, pyyaml plus
name = yamlplus
version = 1.1
author = mengjianhua
author-email = 1711621009@qq.com
summary = yaml puls
license = MIT
home-page = https://github.com/Mengjianhua-c/pyyaml-plus
description = Yaml Library of cross file reference
# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
packages=yamlplus
