[metadata]
keywords = pyyaml, pyyaml plus
name = yamlplus
version = 1.2
author = mengjianhua
author-email = 1711621009@qq.com
summary = yaml puls
license = MIT
home-page = https://github.com/Mengjianhua-c/pyyaml-plus
description = Yaml Library of cross file reference
# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[files]
packages=yamlplus
